--- a/.pages.yml
+++ b/.pages.yml
@@ -5,7 +5,7 @@ content:
     type: collection
     path: content/blog
     view:
-      fields: [ title, draft, date ]
+      fields: [ title, draft, status, date ]
     fields:
       - { name: title, label: Title, type: string, required: true }
       - { name: description, label: Description, type: string }
@@ -13,6 +13,7 @@ content:
       - { name: draft, label: Draft, type: boolean }
       - { name: tags, label: Tags, type: string, list: true }
       - { name: body, label: Body, type: rich-text }
+      - { name: status, label: Status, type: select, options: {values: [ Tech, News, Sports ]} }
   - name: about
     label: About page
     type: file
